# OpenPilot

./: .commit-template  .gitattributes  .gitignore  .gitmodules  .mailmap  CMakeLists.txt  COPYRIGHT  CREDITS.txt  HISTORY.txt  KNOWN_ISSUES.txt  LICENSE.txt  MILESTONES.txt  Makefile  Makefile.cmd  OPLicenseTemplate.txt  README  README.txt  TODO  User.make  WHATSNEW.txt  find_broken_line_endings.sh  link_to_subversion.sh  openpilotgcs.bat  rtslam-codestyle  rtslam-codestyle.xml  x
ground/: .gitattributes  CMakeLists.txt  ground.pro  ground.pro.user.2.1pre1  openpilotgcs.pri  openpilotgcs.pro
ground/OpenPilotGCS/: Makefile  Makefile.Debug  Makefile.Release  OpenPilotGCS.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
ground/android/: AndroidManifest.xml  version.xml
ground/android/res/layout/: splash.xml
ground/android/res/values/: libs.xml  strings.xml
ground/doc/: Build.txt  TODO.txt
ground/docs/: UAVObj relations Framework document.doc
ground/loggerextractor/: loggerextractor.pro  main.cpp
ground/nodeuavtalk/: README.md  package.json  test.js  test_decode.js  test_packet.js  testfile.js  testserial.js  uavtalk_decodejson.js  uavtalk_packet.js
ground/nodeuavtalk/public/: cc3d.js  index.html
ground/openpilotgcs/: CMakeLists.txt  copydata.pro  copydata.pro~  openpilotgcs.pri  openpilotgcs.pri~  openpilotgcs.pro
ground/openpilotgcs/packaging/: packaging.pro
ground/openpilotgcs/packaging/winx86/: Makefile.cmd  make_header.cmd  make_installer.cmd  openpilotgcs.nsi  openpilotgcs.tpl  svninfo.mk  svninfo.tpl  winx86.pro
ground/openpilotgcs/share/: copydata.pro  share.pro
ground/openpilotgcs/src/: CMakeLists.txt  gcs_version_info.h  openpilotgcslibrary.pri  openpilotgcsplugin.pri  python.pri  rpath.pri  src.pro  version_info.h
ground/openpilotgcs/src/app/: CMakeLists.txt  Info.plist  app.pro  appresources.qrc  gcssplashscreen.cpp  gcssplashscreen.h  gcsversioninfo.pri  main.cpp  openpilotgcs.icns  qt.conf  qtconf.qrc  version_info.cpp  version_info.pri
ground/openpilotgcs/src/libs/: CMakeLists.txt  libs.pro
ground/openpilotgcs/src/plugins/: CMakeLists.txt  plugins.pro
ground/openpilotgcs/src/share/: copydata.pro  share.pro
ground/openpilotgcs/src/shared/: CMakeLists.txt  namespace_global.h
ground/packaging/: packaging.pro
ground/packaging/winx86/: MakeInstallers.bat  OpenPilot.wxs  bin.wxi  dials.wxi  models.wxi  plugins.wxi  sounds.wxi  winx86.pro
ground/packaging/winx86/DefaultSettings/: OpenPilotGCS.db  OpenPilotGCS.ini
ground/packaging/winx86/UI_translations/: es-es.wxl  fr-fr.wxl  wixui_zh-tw.wxl
ground/packaging/winx86/Wix/: MakeInstallers.bat  OpenPilot.wxs  dials.wxi  models.wxi  sounds.wxi
ground/packaging/winx86/license/: GPLv3_en.rtf  GPLv3_es.rtf  GPLv3_fr.rtf  GPLv3_ru.rtf  GPLv3_zh_cn.rtf
ground/packaging/winx86/nsis/: BuildInstaller.cmd  OpenPilotGCS.nsh  OpenPilotGCS.nsi
ground/pyuavtalk/: example.py  setup.py
ground/pyuavtalk/examples/: example.py  example_readlog.py  example_tuning.py
ground/pyuavtalk/openpilot/uavtalk/: connectionManager.py  flighttelemetrystats.py  objectManager.py  uavobject.py  uavtalk.py
ground/share/: share.pro
ground/share/openpilotgcs/gauges/: gauges.pro
ground/share/openpilotgcs/models/: models.pro
ground/share/openpilotgcs/pfd/: pfd.pro
ground/share/openpilotgcs/sounds/: Complete sound set.txt  License.txt  sounds.pro
ground/share/openpilotgcs/translations/: README  extract-mimetypes.xq.in  openpilotgcs_de.ts  openpilotgcs_es.ts  openpilotgcs_fr.ts  openpilotgcs_it.ts  openpilotgcs_ru.ts  openpilotgcs_zh_CN.ts  translations.pro
ground/src/: openpilotgcslibrary.pri  openpilotgcsplugin.pri  rpath.pri  src.pro
ground/src/app/: app.pro  main.cpp  openpilotgcs.icns  openpilotgcs.rc
ground/src/experimental/DialTest/: DialTest.pro  README.txt  basicdial.cpp  basicdial.h  basicsvgdial.cpp  basicsvgdial.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
ground/src/experimental/HIDTest/: main.cpp
ground/src/experimental/OPMapWidget/: OPMapControl.pro  common.pri
ground/src/experimental/PipXtreme_Config/: PipXtreme_Config.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
ground/src/experimental/SerialLogger/: ParseEKFLog.m  analyzeEKF.m  analyzeINSGPS.m  analyzeRaw.m  main.cpp  read.m
ground/src/experimental/USB_UPLOAD_TOOL/: delay.cpp  main.cpp  op_dfu.cpp  op_dfu.h  upload.pro
ground/src/experimental/finaltest/: mainwindow.cpp  mainwindow.ui  ui_mainwindow.h
ground/src/libs/: libs.pro
ground/src/libs/aggregation/: aggregate.h
ground/src/libs/extensionsystem/: extensionsystem.pro  iplugin_p.h  optionsparser.cpp  plugindetailsview.cpp  plugindetailsview.ui  pluginerrorview.h  pluginmanager.cpp  pluginmanager.h  pluginview.cpp  pluginview.h  pluginview.ui  pluginview_p.h
ground/src/libs/glc_lib/: Makefile  glc_boundingbox.cpp  glc_enum.cpp  glc_enum.h  glc_exception.cpp  glc_ext.cpp  glc_ext.h  glc_factory.cpp  glc_fileformatexception.cpp  glc_global.cpp  glc_global.h  glc_lib.pri  glc_lib.pro  glc_object.cpp  glc_openglexception.cpp  glc_state.cpp  glc_state.h
ground/src/libs/juavobjects/: README
ground/src/libs/libqxt/: libqxt.pro
ground/src/libs/opmapcontrol/: opmapcontrol.pri
ground/src/libs/qextserialport/: qextserialport.pri  readme.txt
ground/src/libs/qmapcontrol/: qmapcontrol.pri  (+1 more)
ground/src/plugins/: Makefile  Makefile.Debug  fgoptionspage.ui  fgsimulator.h  hitlconfiguration.cpp  hitlconfiguration.h  hitlfactory.cpp  hitlfactory.h  hitlnew.pluginspec  hitlnew.pro  hitlnew_dependencies.pri  hitloptionspage.ui  hitlplugin.cpp  hitlplugin.h  il2simulator.cpp  object_script.HITLNEW.Release  opfgprotocol.xml  plugins.pro  ui_hitlwidget.h
ground/src/shared/: namespace_global.h
ground/uavobject-synthetics/: CMakeLists.txt  uavobject-synthetics.pro  uavobject.cmake
ground/uavobjects/: uavobjects.pro
ground/uavobjgenerator/: CMakeLists.txt  main.cpp  uavobjectparser.cpp  uavobjectparser.h  uavobjgenerator.pro
ground/uavobjgenerator/generators/: generator_common.cpp  generator_common.h  generator_io.cpp  generator_io.h
(+8865 files in other folders)
