include(GenerateExportHeader)

set(BUILD_SHARED_LIBS ON)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${GCS_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${GCS_BINARY_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${GCS_BINARY_DIR})
foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
    string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${GCS_BINARY_DIR})
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${GCS_BINARY_DIR})
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${GCS_BINARY_DIR})
endforeach(OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)

if(WIN32)
    set(CMAKE_DEBUG_POSTFIX "d")
endif()

set(GCSLIBS_VERSION_MAJOR 1)
set(GCSLIBS_VERSION_STRING ${GCSLIBS_VERSION_MAJOR}) 
                                          
add_subdirectory(aggregation)
add_subdirectory(extensionsystem)
add_subdirectory(glc_lib)
add_subdirectory(opmapcontrol)
add_subdirectory(qscispinbox)
add_subdirectory(qwt)
add_subdirectory(sdlgamepad)
add_subdirectory(utils)
add_subdirectory(version_info)
