set(qwt_SRCS
    src/qwt_abstract_scale_draw.cpp
    src/qwt_interval_symbol.cpp
    src/qwt_clipper.cpp
    src/qwt_color_map.cpp
    src/qwt_column_symbol.cpp
    src/qwt_interval.cpp
    src/qwt_dyngrid_layout.cpp
    src/qwt_math.cpp
    src/qwt_magnifier.cpp
    src/qwt_panner.cpp
    src/qwt_null_paintdevice.cpp
    src/qwt_painter.cpp
    src/qwt_picker.cpp
    src/qwt_round_scale_draw.cpp
    src/qwt_scale_div.cpp
    src/qwt_scale_draw.cpp
    src/qwt_scale_map.cpp
    src/qwt_spline.cpp
    src/qwt_text_engine.cpp
    src/qwt_text_label.cpp
    src/qwt_text.cpp
    src/qwt_event_pattern.cpp
    src/qwt_picker_machine.cpp
    src/qwt_point_3d.cpp
    src/qwt_point_polar.cpp
    src/qwt_scale_engine.cpp
    src/qwt_symbol.cpp
    src/qwt_system_clock.cpp
    src/qwt_curve_fitter.cpp
    src/qwt_legend.cpp
    src/qwt_legend_item.cpp
    src/qwt_plot.cpp
    src/qwt_plot_renderer.cpp
    src/qwt_plot_xml.cpp
    src/qwt_plot_axis.cpp
    src/qwt_plot_curve.cpp
    src/qwt_plot_dict.cpp
    src/qwt_plot_directpainter.cpp
    src/qwt_plot_grid.cpp
    src/qwt_plot_histogram.cpp
    src/qwt_plot_item.cpp
    src/qwt_plot_intervalcurve.cpp
    src/qwt_plot_spectrogram.cpp
    src/qwt_plot_spectrocurve.cpp
    src/qwt_plot_scaleitem.cpp
    src/qwt_plot_seriesitem.cpp
    src/qwt_plot_marker.cpp
    src/qwt_plot_layout.cpp
    src/qwt_plot_canvas.cpp
    src/qwt_plot_panner.cpp
    src/qwt_plot_rasteritem.cpp
    src/qwt_plot_picker.cpp
    src/qwt_plot_zoomer.cpp
    src/qwt_plot_magnifier.cpp
    src/qwt_plot_rescaler.cpp
    src/qwt_raster_data.cpp
    src/qwt_matrix_raster_data.cpp
    src/qwt_sampling_thread.cpp
    src/qwt_series_data.cpp
    src/qwt_scale_widget.cpp 
)

add_library(qwt ${qwt_SRCS})

qt5_use_modules(qwt Core Widgets)
